gateway4mesh/kuma/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: grafana.kong.builders
  name: grafana
  namespace: mesh-observability
spec:
  ingressClassName: kong
  tls:
    - secretName: grafana-kong-builders
      hosts:
        - grafana.kong.builders
  rules:
    - host: grafana.kong.builders
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 80
