gateway4mesh/kuma/ingress-kong-mesh-gui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: gui.kong.builders
  name: km-gui
  namespace: kong-mesh-system
spec:
  ingressClassName: kong
  tls:
    - secretName: gui-kong-builders
      hosts:
        - gui.kong.builders
  rules:
    - host: gui.kong.builders
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-mesh-control-plane
                port:
                  number: 5681
