gateway4mesh/kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: shop.kongproxy.me
  name: frontend
  namespace: boutique
spec:
  ingressClassName: kong
  tls:
    - secretName: shop-kongproxy-me
      hosts:
        - shop.kongproxy.me
  rules:
    - host: shop.kongproxy.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
